--- a/Snake.js/snake.css
+++ b/Snake.js/snake.css
@@ -12,8 +12,9 @@ canvas {
 button {
     display: block;
     background-color: springgreen;
+    height: 50px;
+    width: 400px;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
-    padding: 10px;
 }
